# snusolver

./: CMakeLists.txt  README.md  run.sh
data/: matrix_20.mtx
scripts/: setenv.sh  srun.sh  srun_check_sparsity.sh  srun_scaling.sh
src/: CMakeLists.txt  SnuMat.cu  SnuMat.h  SnuMat_construct.cu  SnuMat_distribute_data.cu  SnuMat_distribute_structure.cu  SnuMat_factorize.cu  SnuMat_malloc.cu  construct.cpp  data.csv  distribute.cu  driver.cpp  driver.h  factorize.cu  kernel.cpp  kernel.h  kernel_cuda.cu  kernel_cuda.h  kernel_gpu.cu  kernel_gpu.h  kernel_mkl.cpp  kernel_mkl.h  kernel_sparse.cpp  kernel_sparse.cu  matrix.h  mmio.cpp  mmio.h  param.h  parmetis_driver.cpp  parmetis_driver.h  read_matrix.cpp  read_matrix.h  snusolver.h  snusolver_c.cpp  solver.cu  solver_driver.cu  solver_driver.h  solver_part2.h  timer.cpp  timer.h
